# spellbook

./: Cargo.toml  README.md  codebook.toml
examples/: README.md  alternate-debug.rs  array-from-fn.rs  as_sound.rs  as_unsound.rs  asm.rs  base-prefix.rs  break-value.rs  checked-add.rs  clamp.rs  dbg.rs  debug-assert.rs  env-build-time.rs  env-run-time.rs  food.rs  from.rs  hashmap-get.rs  hashmap-or-default.rs  hashmap-or-insert-with-closure.rs  hashmap-or-insert-with-key.rs  hashmap-or-insert-with.rs  hashmap-or-insert.rs  include-bytes.rs  include-readme.rs  include-str.rs  let-block.rs  mem-replace.rs  mem-swap.rs  mem-take.rs  must-use-fn.rs  must-use-type.rs  nonzero.rs  option-and-then-nested.rs  option-and-then.rs  option-as-ref.rs  option-auto-deref.rs  option-default.rs  option-expect.rs  option-let.rs  option-map.rs  (+43 more)
examples/archive/: break-label.rs  continue-label.rs
src/: lib.rs  main.rs
