[package]
name = "spellbook"
version = "0.1.0"
edition = "2024"

[features]
fries = []
gyro = ["fries"]
olives = []
breadsticks = []
default = ["breadsticks", "olives"]

[dependencies]
anstyle = "1.0.13"
anyhow = "1.0.100"
jiff = "0.2.20"
rand = "0.9.2"
uuid = { version = "1.21.0", features = ["v4"] }
